# flowforge-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  developerjournal.md  docker-compose.yml  progress report.md  prompt.md  resume.md
.claude/skills/implement-step/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: health.py  projects.py
backend/app/core/: __init__.py  config.py  db.py  logging.py
backend/app/domain/: __init__.py  base.py  enums.py  models.py
backend/app/services/ingestion/: ast_parser.py  checkout.py  discovery.py  errors.py  extractors.py  git_cloner.py  persistence.py  pipeline.py  zip_extractor.py
backend/migrations/: env.py
backend/migrations/versions/: 20260714_1531_initial_schema.py
backend/tests/: conftest.py  test_config_and_logging.py  test_health.py  test_models.py  test_projects.py  test_readiness.py
backend/tests/services/: __init__.py  test_ast_parser.py  test_checkout.py  test_discovery.py  test_extractors.py  test_git_cloner.py  test_persistence.py  test_pipeline.py  test_zip_extractor.py
docker/postgres/init/: 01-extensions.sql
docs/: ADR.md  CLAUDE_HANDOFF.md  SystemDesign.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
